syntax = "proto3";

option csharp_namespace = "ms.infrastructure.protos";

message OperationResult {
  bool is_success = 1;
  string msg = 2;
}
message StandardReply {
  OperationResult result = 1;
}