syntax = "proto3";

import "google/protobuf/empty.proto";
import "OperationResult.proto";

option csharp_namespace = "ms.infrastructure.protos";

service UserProto {
  rpc Get (UserRequest) returns (UserReply);
  rpc GetList (google.protobuf.Empty) returns (UsersReply);
}

message UserRequest{
  int32 id = 1;
}

message UsersReply{
  OperationResult result = 1;
  repeated UserDto data = 2;
}

message UserReply{
  OperationResult result = 1;
  UserDto data = 2;
}

message UserDto{
  int32 id = 1;
  string name = 2;
  string email = 3;
}
